--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "scripts": {
-    "test": "standard && node test.js",
+    "test": "jest",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "standard": "^17.0.0"
   }
