--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "thmartins <thiago.olivmartins@gmail.com>",
   "license": "MIT",
   "standard": {
+    "env": ["jest"],
     "ignore": []
   },
   "private": true,
