add jest to lint-staged and enabled watch on jest

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "jest --watchAll",
+    "test:staged": "jest",
     "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": [
-      "standard --fix"
+      "standard --fix",
+      "npm run test:staged"
     ]
   },
   "devDependencies": {
